# shusha

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  async.py  pyproject.toml  shusha.sublime-project  shusha.sublime-workspace  ux.py
.github/: settings.yml
docs/: about.html  index.html
motrix/: package.json
ray/: expand.py  expand_ttk.py  frame.py  labelframe.py  login_grid.py  nesting.py  notebook.py  notebook_oop.py  progress_bar.py  scrollbar.py  totald.py
ray/src/gui/: gui.py  gui2.py  rcmenu.py  tkbs_add_win.py  tkbs_main_win.py
ray/src/gui/examples/: FileBackupUtility.py  FileSearchEngine.py
ray/src/gui/sandbox/: tablebs.py
ray/src/sandbox/: bs_flood.py  bs_meter.py  bs_progress_bar.py  clip.py  listbox.py  notebook.py  ray_test.py  sovf.py  tkb.py  weight.py
src/: Aria2Client.py  TODO.md  aria2_client.py  chat.py  gui.py  main_window.py  test-grid_pack.py  test-gui_pack.py  test.py  test.py.annotated
src/_drafts/: test_iii.py  test_iv.py
src/gui/: TODO.md  main_window.py
src/models/: __init__.py  aria2_client.py  daemon.py  logger.py
src/shusha/: 2app.py  ShushaDM.py  __about__.py  __app.py  __main__.py  add_win.py  api.py  app_v2.py  daemon.py  db.py  debug_window.py  shusha.db.bak  shusha.db.dir  tkbs_meter.py  utilities.py
src/shusha/_drafts/: downloadlist_window.py  status_window_2.py  test-gui_pack.py  test.py.annotated  test_ii.py  test_iv.py  test_v.py  test_vi.py  test_vi.py.bak  test_vii.py
src/shusha/controller/: 10Mb.dat.aria2  api.py
src/shusha/models/: ShushaDB.py  client.py  daemon.py  database.py  db.py  logger.py  settings.py  structs_downloads.py  structs_options.py  structs_stats.py  utilities.py
src/shusha/view/: add_win.py  app.py  main_window.py  main_window_2.py  status_win.py  tkbs_add_win.py  tkbs_main_win.py
src/shusha/views/: add_win.py  app.py  status_win.py
src/view/: status_window.py
tests/: main_script_db.py  test_ShushaDB.py  test_database.py  tests_db.py
