[project]
name = "shusha"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FourtyThree43", email = "shaqmwa@outlook.com"},
    {name = "Kemboiray", email = "kemboiray@gmail.com"}
]
dependencies = [
    "ttkbootstrap>=1.10.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
