[project]
name = "shusha"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FourtyThree43", email = "shaqmwa@outlook.com"},
    {name = "Kemboiray", email = "kemboiray@gmail.com"}
]
dependencies = [
    "ttkbootstrap>=1.10.1",
    "platformdirs>=4.1.0",
    "tomli>=2.0.1",
    "pyperclip>=1.8.2",
    "Pillow>=10.2.0",
    "isort>=5.13.2",
    "pytest>=7.4.4",
    "ipython>=8.20.0",
    "ptpython>=3.0.25",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = "false"
